<!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and modify it under the terms of
  ~ the GNU Affero General Public License (AGPL) as published by the Free Software Foundation,
  ~ either version 3 of the License or any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU Affero General Public License included below for more details.
  ~
  ~ The full license text can also be seen at <http://www.gnu.org/licenses/agpl.html>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <org.akvo.caddisfly.util.PreferenceCategoryCustom android:title="@string/developer">
        <Preference
            android:key="cameraPreview"
            android:title="@string/cameraPreview" />
        <CheckBoxPreference
            android:key="@string/ignoreShakeKey"
            android:title="@string/ignoreShakeDuringAnalysis" />
        <Preference
            android:key="ecSensor"
            android:title="@string/testSensor">
            <intent
                android:targetClass="org.akvo.caddisfly.ui.SensorActivity"
                android:targetPackage="org.akvo.caddisfly" />
        </Preference>
        <CheckBoxPreference
            android:key="showDebugMessages"
            android:title="@string/debuggingOn" />
    </org.akvo.caddisfly.util.PreferenceCategoryCustom>
</PreferenceScreen>
