<!--
  ~  Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~  This file is part of Akvo Caddisfly
  ~
  ~  Akvo Caddisfly is free software: you can redistribute it and modify it under the terms of
  ~  the GNU Affero General Public License (AGPL) as published by the Free Software Foundation,
  ~  either version 3 of the License or any later version.
  ~
  ~  Akvo Caddisfly is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~  without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~  See the GNU Affero General Public License included below for more details.
  ~
  ~  The full license text can also be seen at <http://www.gnu.org/licenses/agpl.html>.
  -->


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient">

    <RelativeLayout
        android:id="@+id/devModeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <Button
            android:id="@+id/disableDeveloperButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="90dp"
            android:alpha="0.7"
            android:background="@drawable/green_button"
            android:text="@string/enableUserMode"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-36dp"
            android:layout_marginStart="-36dp"
            android:layout_marginTop="40dp"
            android:ellipsize="none"
            android:singleLine="true"
            android:text="@string/developerAbbreviated"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff063a36"
            android:textSize="270sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity"
            tools:ignore="MergeRootFrame">

            <LinearLayout
                android:id="@+id/videoLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/surveyButton"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/startSurvey"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/watchTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:alpha="0.7"
                    android:gravity="end"
                    android:text="@string/watchVideo"
                    android:textAlignment="textEnd"
                    android:textAllCaps="true"
                    android:textColor="#eefddd44"
                    android:textSize="15sp"
                    tools:ignore="UnusedAttribute" />

                <com.software.shell.fab.ActionButton
                    android:id="@+id/trainingVideoLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="6dp"
                    android:alpha="0.9"
                    fab:button_color="@color/button_primary"
                    fab:button_colorPressed="@color/primary_dark"
                    fab:image="@drawable/ic_action_play"
                    fab:shadow_color="#ff096f14"
                    fab:shadow_xOffset="-.5dp"
                    fab:shadow_yOffset=".5dp"
                    fab:show_animation="@anim/fab_roll_from_down" />

                <TextView
                    android:id="@+id/demoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:alpha="0.7"
                    android:text="@string/demonstration"
                    android:textAllCaps="true"
                    android:textColor="#eefddd44"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>

